--- a/packages/divbase-api/src/divbase_api/templates/profile_pages/index.html
+++ b/packages/divbase-api/src/divbase_api/templates/profile_pages/index.html
@@ -39,6 +39,14 @@
                         <label class="form-label text-muted">Email Address</label>
                         <p class="form-control-plaintext">{{ current_user.email }}</p>
                     </div>
+                    <div class="mb-3">
+                        <label class="form-label text-muted">Organisation</label>
+                        <p class="form-control-plaintext">{{ current_user.organisation }}</p>
+                    </div>
+                    <div class="mb-3">
+                        <label class="form-label text-muted">Role</label>
+                        <p class="form-control-plaintext">{{ current_user.organisation_role }}</p>
+                    </div>
                 </div>
             </div>
         </div>
