--- a/packages/divbase-api/src/divbase_api/templates/profile_pages/edit_profile.html
+++ b/packages/divbase-api/src/divbase_api/templates/profile_pages/edit_profile.html
@@ -39,6 +39,7 @@
                             </div>
                         </div>
 
+                        {# NOTE: If you're going to make changes to the code here, you probably also want to update the code in registration form component. #}
                         <div class="row mb-3">
                             <div class="col-12">
                                 <label for="organisation_dropdown" class="form-label">Organisation</label>
@@ -59,7 +60,7 @@
                         </div>
                         {# This is only displayed if the "Other" option is selected in the organisation dropdown #}
                         <div class="mb-3" id="other_organisation_div" style="display: none;">
-                            <label for="organisation_other" class="form-label">Please add your organisation's name</label>
+                            <label for="organisation_other" class="form-label">Your organisation</label>
                             <div class="input-group">
                                 <span class="input-group-text">
                                     <i class="bi bi-building-add"></i>
@@ -68,9 +69,11 @@
                                     class="form-control"
                                     id="organisation_other"
                                     name="organisation_other"
-                                    placeholder="Enter your organisation's name"
-                                    value="{{ organisation_other or '' }}">
+                                    value="{{ organisation_other or '' }}"
+                                    pattern=".{3,200}"
+                                    title="Organisation name must be between 3 and 200 characters long.">
                             </div>
+                            <small class="text-muted">Please enter your organisation's name (3-200 characters).</small>
                         </div>
 
                         <div class="mb-3">
@@ -85,8 +88,11 @@
                                     name="organisation_role"
                                     placeholder="e.g. PhD Student, Researcher"
                                     value="{{ organisation_role or '' }}"
+                                    minlength="3"
+                                    maxlength="100"
                                     required>
                             </div>
+                            <small class="text-muted">Enter your role at your organisation (3-100 characters).</small>
                         </div>
 
                         <div class="row mb-3">
