frontend: improve HTML for register + edit profile forms

--- a/packages/divbase-api/src/divbase_api/templates/auth_pages/register.html
+++ b/packages/divbase-api/src/divbase_api/templates/auth_pages/register.html
@@ -8,3 +8,8 @@
 {% include "components/registration_form.html" %}
 </div>
 {% endblock %}
+
+
+{% block custom_scripts %}
+<script src="/static/js/organisation_dropdown.js"></script>
+{% endblock %}
