--- a/packages/divbase-api/src/divbase_api/templates/components/registration_form.html
+++ b/packages/divbase-api/src/divbase_api/templates/components/registration_form.html
@@ -57,7 +57,7 @@
                                 <i class="bi bi-building"></i>
                             </span>
                             <select class="form-select" id="organisation_dropdown" name="organisation" required>
-                                <option value="" disabled selected>Select an organisation...</option>
+                                <option value=""  disabled {% if not organisation %}selected{% endif %}>Select an organisation...</option>
                                 <option value="Other" {% if organisation == 'Other' %}selected{% endif %}>Other</option>
                                 {% for org in swedish_universities %}
                                     <option value="{{ org }}" {% if organisation == org %}selected{% endif %}>{{ org }}</option>
@@ -142,7 +142,8 @@
                             <i class="bi bi-person-plus me-2"></i>Create Account
                         </button>
                     </div>
-
+                
+                </form>
                 <hr class="my-4">
                 <div class="text-center d-flex justify-content-center align-items-center gap-3 flex-wrap">
                     <div>
@@ -163,7 +164,3 @@
         </div>
     </div>
 </div>
-
-{% block custom_scripts %}
-<script src="/static/js/organisation_dropdown.js"></script>
-{% endblock %}
